<resources>
    <string name="app_name">wanandroid</string>

    //tab
    <string name="main_bottom_nav_title_home">首页</string>
    <string name="main_bottom_nav_title_project">项目</string>
    <string name="main_bottom_nav_title_user">我的</string>

    //title
    <string name="title_home">首页</string>
    <string name="title_login">登录</string>
    <string name="title_broswer">正在加载...</string>

    //menu
    <string name="menu_search">搜索</string>
    <string name="menu_close">关闭</string>

    //content
    <string name="item_author">作者</string>
    <string name="item_shareUser">分享人</string>
    <string name="item_chapter">分类</string>
    <string name="item_time">时间</string>
    <string name="item_tag_new">新</string>
    <string name="item_tag_top">置顶</string>

    <string name="user_id">id</string>
    <string name="user_coin">积分</string>
    <string name="user_collect_article">收藏文章</string>
    <string name="user_share_article">分享文章</string>
    <string name="user_collect_website">收藏网站</string>
    <string name="user_share_website">分享网站</string>
    <string name="user_setting">设置</string>
    <string name="user_open_source">开源地址</string>

    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_placeholder_username">请输入用户名</string>
    <string name="login_placeholder_password">请输入密码</string>
    <string name="login_commit">登录</string>
    <string name="login_dialog_message">正在登录...</string>

    //toast
    <string name="toast_exit">再按一次将退出应用</string>
    <string name="toast_login">请先登录</string>

    //other
    <string name="fab_scroll_behavior">com.jenson.core.widget.FabScrollBehavior</string>
    <string name="tag_recyclerview">RecyclerView</string>
</resources>